--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+	<uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
+	<uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -18,11 +20,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mfedarko.smspidemic.MainActivity" />
         </activity>
         <activity
             android:name=".LauncherActivity"
@@ -32,6 +32,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GameStatusActivity"
+            android:label="@string/title_activity_game_status"
+            android:parentActivityName=".LauncherActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mfedarko.smspidemic.LauncherActivity" />
         </activity>
     </application>
 
