--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,14 +21,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mfedarko.smspidemic.MainActivity" />
         </activity>
         <activity
             android:name=".LauncherActivity"
-            android:label="@string/title_activity_launcher" >
+            android:label="@string/title_activity_launcher"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,18 +40,20 @@
         <activity
             android:name=".GameStatusActivity"
             android:label="@string/title_activity_game_status"
-            android:parentActivityName=".LauncherActivity" >
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mfedarko.smspidemic.LauncherActivity" />
         </activity>
         <activity
             android:name=".AboutActivity"
-            android:label="@string/title_activity_about" >
+            android:label="@string/title_activity_about"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".AddUserAsPlayerActivity"
-            android:label="@string/title_activity_add_user_as_player" >
+            android:label="@string/title_activity_add_user_as_player"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
