--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,6 +13,8 @@
     </uses-permission>
     <uses-permission android:name="android.permission.RECEIVE_SMS" >
     </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE">
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -48,11 +50,6 @@
         <activity
             android:name=".AboutActivity"
             android:label="@string/title_activity_about"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name=".AddUserAsPlayerActivity"
-            android:label="@string/title_activity_add_user_as_player"
             android:screenOrientation="portrait" >
         </activity>
     </application>
